--- a/src/main/java/axoloti/dialogs/AxoObjectEditor.form
+++ b/src/main/java/axoloti/dialogs/AxoObjectEditor.form
@@ -291,7 +291,9 @@
                         <Component class="javax.swing.JTextArea" name="jTextDesc">
                           <Properties>
                             <Property name="columns" type="int" value="20"/>
+                            <Property name="lineWrap" type="boolean" value="true"/>
                             <Property name="rows" type="int" value="5"/>
+                            <Property name="wrapStyleWord" type="boolean" value="true"/>
                           </Properties>
                         </Component>
                       </SubComponents>
