--- a/src/main/java/axoloti/dialogs/AxoObjectEditor.form
+++ b/src/main/java/axoloti/dialogs/AxoObjectEditor.form
@@ -44,7 +44,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="This object editor is uncomplete. The tabs for inlets, outlets, parameters, attributes are not working. "/>
+        <Property name="text" type="java.lang.String" value="This object editor is incomplete. The tabs for inlets, outlets, parameters, attributes are not working. "/>
         <Property name="verifyInputWhenFocusTarget" type="boolean" value="false"/>
       </Properties>
     </Component>
