UI:fix select device for multple devices, allow double click selection

--- a/src/main/java/axoloti/dialogs/USBPortSelectionDlg.form
+++ b/src/main/java/axoloti/dialogs/USBPortSelectionDlg.form
@@ -137,6 +137,9 @@
               <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTable1MouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
