UI:allow users to name boards

--- a/src/main/java/axoloti/dialogs/USBPortSelectionDlg.form
+++ b/src/main/java/axoloti/dialogs/USBPortSelectionDlg.form
@@ -108,7 +108,8 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="0">
+              <Table columnCount="4" rowCount="0">
+                <Column editable="true" title="Name" type="java.lang.String"/>
                 <Column editable="false" title="Device" type="java.lang.String"/>
                 <Column editable="false" title="Location" type="java.lang.String"/>
                 <Column editable="false" title="CPU ID" type="java.lang.String"/>
@@ -116,6 +117,11 @@
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
